kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: super-duper-service
  namespace: homework
spec:
  type: ClusterIP
  selector:
    app: otus-homework
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
